force-app/main/default/objects/Slack__mdt/Slack__mdt.object-meta.xml
<CustomObject>
    <description>Stores detail of the Slack Demo Org this brix is connected to. Populated at deploy time from Demo Zone via the slack_org_detail task.</description>
    <label>Slack</label>
    <pluralLabel>Slack</pluralLabel>
</CustomObject>