force-app/main/default/objects/Slack__mdt/fields/Enterprise_ID__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_ID__c</fullName>
    <description>Enterprise Slack ID of the connected Slack Demo Org (e.g. E0B1QEQB4E7). From Demo Zone /detail response. Used to build https://app.slack.com/client/{enterprise_id} URLs.</description>
    <label>Enterprise ID</label>
    <type>TextArea</type>
</CustomField>