force-app/main/default/objects/Slack__mdt/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <description>Slack subdomain of the connected Slack Demo Org (e.g. slack-demo-20143). From Demo Zone /detail response.</description>
    <label>Org</label>
    <type>TextArea</type>
</CustomField>