force-app/main/default/objects/Slack__mdt/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <description>Display name of the connected Slack Demo Org (e.g. Slack Demo 20143). From Demo Zone /detail response.</description>
    <label>Org Name</label>
    <type>TextArea</type>
</CustomField>