force-app/main/default/objects/Slack__mdt/fields/Org_Url__c.field-meta.xml
<CustomField>
    <fullName>Org_Url__c</fullName>
    <description>Full enterprise URL of the connected Slack Demo Org. From Demo Zone /detail response.</description>
    <label>Org Url</label>
    <type>Url</type>
</CustomField>