force-app/main/default/objects/Slack__mdt/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <description>Salesforce email of the SE who claimed the Slack Demo Org via Demo Zone (human_owner.human_salesforce_fid). Required by the magic-login API as the Owner Salesforce ID.</description>
    <label>Owner Email</label>
    <type>TextArea</type>
</CustomField>